Fix Unsafe.setAccessible() not working from Java 12 onwards